# MEMU

./: .gitignore  AGENTS.md  CMakeLists.txt  MEMU_STATUS.md  Makefile  README.md
docs/: README.md  compat-status.md  nemu-compatibility.md  nemu-stage-acceptance.md  nemu-strict-alignment.md  roadmap.md  stage-progress.md
docs/stages/: stage-00-project-setup.md  stage-01-trm-core.md  stage-02-debugger.md  stage-03-rv32i-exec.md  stage-04-runtime-loader-tests.md  stage-05-devices-am.md  stage-06-syscall-batch.md  stage-07-filesystem-apps.md  stage-08-multiprogramming-vmem.md
docs/textbook/: README.md  chapter-00-macos-and-linux.md  chapter-01-project-skeleton.md  chapter-02-trm-core.md  chapter-03-debugger.md  chapter-04-rv32i-exec.md  chapter-05-runtime-loader-tests.md  chapter-06-devices-am.md  chapter-07-syscall-batch.md  chapter-08-filesystem-apps.md  chapter-09-multiprogramming-vmem-interrupts.md  chapter-10-nemu-compatibility.md
include/memu/: batch.h  common.h  cpu.h  device.h  expr.h  fs.h  loader.h  memory.h  mmu.h  monitor.h  ramdisk.h  syscall.h  watchpoint.h
src/: main.c
src/common/: log.c
src/cpu/: cpu.c
src/device/: device.c
src/isa/: rv32i.c
src/loader/: image.c
src/memory/: memory.c  mmu.c
src/monitor/: expr.c  monitor.c  watchpoint.c
src/os/: batch.c  fs.c  ramdisk.c  syscall.c
tests/: smoke.sh
tests/devices/: run_stage5.sh
tests/fs/: run_stage7.sh
tests/fsimg/: MANIFEST
tests/fsimg/share/: message.txt
tests/guest/toolchain/: linker.ld  start.S  toolchain_basic.c
tests/guest/vm/: mp_os.c  start.S  vm_fault.c
tests/images/: good.elf  mp-os.elf  ramdisk.img  toolchain-basic.elf  vm-fault.elf
tests/isa/: run_rv32i.sh
tests/runtime/: run_stage4.sh
tests/smoke/: run_expr_generated.py  run_monitor_commands.sh
tests/stage1/: run_stage1.sh
tests/syscall/: run_stage6.sh
tests/toolchain/: run_toolchain.sh
tests/vm/: run_stage8.sh
tools/: README.md  build-guest-tests.sh  patch-pa-litenes-audio.py  patch-pa-nanos-lite.py  patch-pa-navy-ndl.py  patch-pa-nemu-ioe.py  patch-pa-nwm-test.py  patch-pa-pal.py  prepare-pal-data.py  run-pa-am-app-sdl.sh  run-pa-am-tests.sh  run-pa-app-tests.sh  run-pa-cpu-tests.sh  run-pa-cte-os-tests.sh  run-pa-fceux-test.sh  run-pa-mario.sh  run-pa-nanos-tests.sh  run-tests.sh
tools/artifacts/: README.md
tools/mkbin/: convert_slides.py  device_programs.py  execve-test.c  fd-test.c  fork-test.c  fs_programs.py  gen_slides.py  memfd-test.c  ndl-test.c  runtime_programs.py  rv32i_programs.py  stage1_trap.py  syscall_programs.py  vfork-child.c  vfork-test.c
tools/mkfs/: mkfs.py
